# cv

./: .gitignore
cvLearning/HoughLines/: Makefile  main.cpp
cvLearning/MatFriends/: Makefile  main.cpp
cvLearning/MatxVec/: Makefile  main.cpp
cvLearning/SparesMat/: Makefile  main.cpp
cvLearning/border/: Makefile  main.cpp
cvLearning/camera/: Makefile  main.cpp
cvLearning/corrDFT/: corrDFT  corrDFT.cpp
cvLearning/data1/: Makefile  main.cpp
cvLearning/dft/: CMakeLists.txt  dft  main.cpp
cvLearning/draw/: Makefile  main.cpp
cvLearning/filter/filter_blur+/: Makefile  main.cpp
cvLearning/filter/filter_median/: Makefile  main.cpp
cvLearning/gradient/: Makefile  main.cpp
cvLearning/idft/: idft  idft.cpp
cvLearning/mat/: CMakeLists.txt  Makefile  main.cpp
cvLearning/myfilter2D/: Makefile  main.cpp
cvLearning/thresh/: Makefile  main.cpp
cvLearning/video/: Makefile  main.cpp
